--- a/AERSP-424-HW2.vcxproj.filters
+++ b/AERSP-424-HW2.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="GeneralAviation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ATC.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Plane.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GeneralAviation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ATC.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
