Q8 Implementation (Bug preventing output looping)

--- a/AERSP-424-HW2.vcxproj
+++ b/AERSP-424-HW2.vcxproj
@@ -70,6 +70,10 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <IncludePath>C:\Users\Andrew\Documents\SDL\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Users\Andrew\Documents\SDL\lib\x64;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -108,6 +112,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -130,6 +135,7 @@
     <ClCompile Include="Airliner.cpp" />
     <ClCompile Include="ATC.cpp" />
     <ClCompile Include="GeneralAviation.cpp" />
+    <ClCompile Include="HW2_Visualizer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Plane.cpp" />
   </ItemGroup>
@@ -137,6 +143,7 @@
     <ClInclude Include="Airliner.h" />
     <ClInclude Include="ATC.h" />
     <ClInclude Include="GeneralAviation.h" />
+    <ClInclude Include="HW2_Visualizer.h" />
     <ClInclude Include="Plane.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
