--- a/AERSP-424-HW2.vcxproj.filters
+++ b/AERSP-424-HW2.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="ATC.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="HW2_Visualizer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Plane.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ATC.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HW2_Visualizer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
